resources/tests/invalid_syntax/unary_plus.ct
//`Unary '+' is not supported!
//1
fn main()->i64 {  
  +10;
}